[package]
name = "api_status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
ureq = "2.4.0"
oauth2 = { version = "4.1.0", features = ["ureq"] }