[package]
name = "jack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
smolhttp = "1.1.0"
oauth2 = "4.1.0"
toml = "0.5"
open = "1"

[dependencies.serde]
version = "1.0"
features = [ "derive" ]